[gd_scene load_steps=21 format=3 uid="uid://bubugpoepm01g"]

[ext_resource type="Script" path="res://Scripts/inventory_ui.gd" id="1_sx561"]
[ext_resource type="Texture2D" uid="uid://dv4l0x14eroij" path="res://Assets/temp_tabs3.png" id="2_4u8g0"]
[ext_resource type="FontFile" uid="uid://ney6ybfqgm7a" path="res://Assets/fonts/OpenDyslexic2 (Windows, MacOS, Linux OTF)/OpenDyslexic-Bold.otf" id="2_t6vya"]
[ext_resource type="FontFile" uid="uid://bfgp7mg6wu44k" path="res://Assets/fonts/OpenDyslexic2 (Windows, MacOS, Linux OTF)/OpenDyslexic-Regular.otf" id="3_6tber"]
[ext_resource type="Texture2D" uid="uid://bet5506mokgid" path="res://Assets/temp_tabs2.png" id="3_f5pj3"]
[ext_resource type="Texture2D" uid="uid://dx0d3tvc41avf" path="res://Assets/temp_tabs1.png" id="4_jxbvi"]
[ext_resource type="Script" path="res://Scripts/inventoryTabs.gd" id="5_rwuap"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5bhrk"]
bg_color = Color(0.529412, 0.662745, 0.521569, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqrjh"]
bg_color = Color(0.435294, 0.545098, 0.431373, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cikh"]
bg_color = Color(0.839216, 0.780392, 0.639216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_madjq"]
bg_color = Color(0.529412, 0.662745, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4hwh"]
bg_color = Color(0.513726, 0.611765, 0.662745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sq5x"]
bg_color = Color(0.8, 0.6, 0.439216, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_simfe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bxp3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sonpy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj88d"]

[sub_resource type="Animation" id="Animation_lqa6v"]
resource_name = "close_info"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(40, 40), Vector2(860, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("infoPanel:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1200, 640), Vector2(380, 640)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:infoOpen")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("infoPanel/infoVbox/TabBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"disable"
}, {
"args": [false],
"method": &"disable"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("infoPanel/infoVbox/descriptionPanel/descriptionMargin/descriptionText:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("inventorySeparator:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(20, 0), Vector2(840, 0)]
}

[sub_resource type="Animation" id="Animation_0o25c"]
resource_name = "open_info"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("infoPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(860, 40), Vector2(40, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("infoPanel:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(380, 640), Vector2(1200, 640)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:infoOpen")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("infoPanel/infoVbox/TabBar")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"disable"
}, {
"args": [false],
"method": &"disable"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("infoPanel/infoVbox/descriptionPanel/descriptionMargin/descriptionText:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("inventorySeparator:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(840, 0), Vector2(20, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3q1eu"]
_data = {
"close_info": SubResource("Animation_lqa6v"),
"open_info": SubResource("Animation_0o25c")
}

[node name="inventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_sx561")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.901961, 0.85098, 0.741176, 1)

[node name="inventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -440.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="inventoryGrid" type="GridContainer" parent="inventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="Objects" type="Control" parent="inventoryPanel"]
anchors_preset = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="finishButton" type="Button" parent="inventoryPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.5
offset_top = -36.0
offset_right = 29.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_t6vya")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_5bhrk")
theme_override_styles/hover = SubResource("StyleBoxFlat_eqrjh")
text = " FINSIH "

[node name="infoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 860.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1cikh")

[node name="infoVbox" type="VBoxContainer" parent="infoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="groundItemsScroll" type="ScrollContainer" parent="infoPanel/infoVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_madjq")
horizontal_scroll_mode = 0

[node name="groundItemsGrid" type="GridContainer" parent="infoPanel/infoVbox/groundItemsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 10
columns = 2

[node name="descriptionPanel" type="Panel" parent="infoPanel/infoVbox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_d4hwh")

[node name="descriptionMargin" type="MarginContainer" parent="infoPanel/infoVbox/descriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="descriptionText" type="RichTextLabel" parent="infoPanel/infoVbox/descriptionPanel/descriptionMargin"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.427451, 0.513726, 0.556863, 1)
theme_override_colors/font_outline_color = Color(1, 0.996078, 1, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_font_sizes/normal_font_size = 24
text = "Oh fuck on shit oh fuck my balls got chopped off by the wood chipper oh fuck please help me the woodchipper it hurts oh my god help.
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH"

[node name="mapPanel" type="Panel" parent="infoPanel/infoVbox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1sq5x")

[node name="VBoxContainer" type="VBoxContainer" parent="infoPanel/infoVbox/mapPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="dayText" type="Label" parent="infoPanel/infoVbox/mapPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_t6vya")
theme_override_font_sizes/font_size = 48
text = "Day 0"

[node name="helpTextMargin" type="MarginContainer" parent="infoPanel/infoVbox/mapPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="helpText" type="RichTextLabel" parent="infoPanel/infoVbox/mapPanel/VBoxContainer/helpTextMargin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_6tber")
theme_override_fonts/bold_font = ExtResource("2_t6vya")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "[b]Goal:[/b] Pack items to ensure your survival on the journey ahead.
[b]Food[/b]: You need food to survive. If you go to don't have enough food in your pack (1) you won't survive.
[b]Water[/b]: You need water to survive. If you go to don't have enough water in your pack (2) you won't survive.
[b]Weapon[/b]: It couldn't hurt to have a weapon. You never know what scenario might occur."

[node name="TabBar" type="TabBar" parent="infoPanel/infoVbox"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/icon_max_width = 0
theme_override_constants/outline_size = 0
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_simfe")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_bxp3w")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_sonpy")
theme_override_styles/tab_disabled = SubResource("StyleBoxEmpty_yj88d")
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false
tab_count = 3
tab_0/title = ""
tab_0/icon = ExtResource("2_4u8g0")
tab_1/title = ""
tab_1/icon = ExtResource("3_f5pj3")
tab_2/title = ""
tab_2/icon = ExtResource("4_jxbvi")
script = ExtResource("5_rwuap")

[node name="uiAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3q1eu")
}

[node name="inventorySeparator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 840.0
offset_right = -420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.901961, 0.85098, 0.741176, 1)

[connection signal="pressed" from="inventoryPanel/finishButton" to="." method="_on_finish_button_pressed"]
[connection signal="tab_selected" from="infoPanel/infoVbox/TabBar" to="." method="_on_tab_bar_tab_selected"]
