[gd_scene load_steps=12 format=3 uid="uid://b2mk31dn4nxh0"]

[ext_resource type="Script" path="res://Scripts/inventory_ui.gd" id="1_hl5yw"]
[ext_resource type="Texture2D" uid="uid://dx0d3tvc41avf" path="res://Assets/temp_tabs1.png" id="2_iyyu0"]
[ext_resource type="Texture2D" uid="uid://bet5506mokgid" path="res://Assets/temp_tabs2.png" id="3_ck2ib"]
[ext_resource type="Texture2D" uid="uid://dv4l0x14eroij" path="res://Assets/temp_tabs3.png" id="4_2yfa3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cikh"]
bg_color = Color(0.839216, 0.780392, 0.639216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epw64"]
bg_color = Color(0.529412, 0.662745, 0.521569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4hwh"]
bg_color = Color(0.513726, 0.611765, 0.662745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1sq5x"]
bg_color = Color(0.8, 0.6, 0.439216, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_simfe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bxp3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sonpy"]

[node name="inventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_hl5yw")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.901961, 0.85098, 0.741176, 1)

[node name="inventoryPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(360, 440)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -260.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="inventoryGrid" type="GridContainer" parent="inventoryPanel"]
custom_minimum_size = Vector2(360, 440)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 9

[node name="infoPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(220, 440)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1cikh")

[node name="infoVbox" type="VBoxContainer" parent="infoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="groundItemsScroll" type="ScrollContainer" parent="infoPanel/infoVbox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_epw64")
horizontal_scroll_mode = 0

[node name="groundItemsGrid" type="GridContainer" parent="infoPanel/infoVbox/groundItemsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 2

[node name="Button" type="Button" parent="infoPanel/infoVbox/groundItemsScroll"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 10
text = "dasdas"

[node name="Clear" type="Button" parent="infoPanel/infoVbox/groundItemsScroll"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 10
text = "clear
"

[node name="descriptionPanel" type="Panel" parent="infoPanel/infoVbox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_d4hwh")

[node name="descriptionMargin" type="MarginContainer" parent="infoPanel/infoVbox/descriptionPanel"]
layout_mode = 2
offset_right = 220.0
offset_bottom = 407.0
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12

[node name="descriptionText" type="RichTextLabel" parent="infoPanel/infoVbox/descriptionPanel/descriptionMargin"]
layout_mode = 2
size_flags_vertical = 3
text = "Oh fuck on shit oh fuck my balls got chopped off by the wood chipper oh fuck please help me the woodchipper it hurts oh my god help.
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH"

[node name="mapPanel" type="Panel" parent="infoPanel/infoVbox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1sq5x")

[node name="TabBar" type="TabBar" parent="infoPanel/infoVbox"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/icon_max_width = 0
theme_override_constants/outline_size = 0
theme_override_styles/tab_selected = SubResource("StyleBoxEmpty_simfe")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_bxp3w")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_sonpy")
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false
tab_count = 3
tab_0/title = ""
tab_0/icon = ExtResource("4_2yfa3")
tab_1/title = ""
tab_1/icon = ExtResource("3_ck2ib")
tab_2/title = ""
tab_2/icon = ExtResource("2_iyyu0")

[node name="Objects" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="infoPanel/infoVbox/groundItemsScroll/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="infoPanel/infoVbox/groundItemsScroll/Clear" to="." method="_on_clear_pressed"]
[connection signal="tab_selected" from="infoPanel/infoVbox/TabBar" to="." method="_on_tab_bar_tab_selected"]
